--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-    <meta charset="utf-8">
+    <head>
+     <meta charset="utf-8">
     <meta name="viewport" content="device-width,inital-scale-=1.0">
-    <title>Logan Wall | WDD 130</title>
+     <title>Logan Wall | WDD 130</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>"
-            <a href="wwr/site-plan-rafting.html"White Water Rafting Siteplan</a>
+            <a href="wwr/">White Water Rafting Website"</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
     <main>
         <h1>Logan Wall | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name os Logan Wall" width="200">
-        <p> Hello! My name is Logan Wall and Iam from Hooper Utah I enjoy dirt biking and video games</p>
+        <p> Hello! My name is Logan Wall and Iam from Hooper Utah I enjoy dirt biking and video games and I am studying programming and web devlopment</p>
     </main>
     <footer>
         <p>&copy;2023 🔫 Logan Wall 🔫 Hooper, Utah</p>
