--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
      <meta charset="utf-8">
-    <meta name="viewport" content="device-width,inital-scale-=1.0">
+    <meta name="viewport" content="width=device-width,inital-scale=1.0">
      <title>Logan Wall | WDD 130</title>
 </head>
 <body>
