--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inital-scale=1.0">
      <title>Logan Wall | WDD 130</title>
+     <link rel="stylesheet" href="styles/styles.css"> 
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>"
-            <a href="wwr/">White Water Rafting Website"</a>
+            <a href="#">Home</a>
+            <a href="wwr/">"White Water Rafting Website"</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
