added CSS to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inital-scale=1.0">
      <title>Logan Wall | WDD 130</title>
+
+     <meta name="description" content="This the my Home Page for WD130 for use in practicing priciples I learn and completing assignments.">
+     <meta name="author" content="Logan Wall">
      <link rel="stylesheet" href="styles/styles.css"> 
 </head>
 <body>
@@ -19,6 +22,11 @@
         <img src="images/profile.jpg" alt="Hello, my name os Logan Wall" width="200">
         <p> Hello! My name is Logan Wall and Iam from Hooper Utah I enjoy dirt biking and video games and I am studying programming and web devlopment</p>
     </main>
+    <aside>
+        <h2>Utah</h2>
+        <img src="images/Utah.jpeg" alt="Utah canyon"> 
+        <p>Utah is the most beautifal state in the western united states</p>
+    </aside>
     <footer>
         <p>&copy;2023 🔫 Logan Wall 🔫 Hooper, Utah</p>
     </footer>
