Week03 home page enhancement

--- a/index.html
+++ b/index.html
@@ -16,14 +16,32 @@
             <a href="#">Home</a>
             <a href="wwr/">"White Water Rafting Website"</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="https://www.linkedin.com/">Linkedin Home Page</a>
+            <a href="https://www.facebook.com/">Facebook Home Page</a>
         </nav>
     </header>
     <main>
         <h1>Logan Wall | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name os Logan Wall" width="200">
-        <p> Hello! My name is Logan Wall and Iam from Hooper Utah I enjoy dirt biking and video games and I am studying programming and web devlopment</p>
+        <p> Hello! My name is Logan Wall and I am from Hooper Utah I enjoy dirt biking, video games and weightlifting 
+            I am studying programming and web devlopment
+            I'm still not sure what career i want to pursue but have always loved computers I hope perhaps one day to devlop my own video game.
+            I served my mission in Tucson Arizona and loved it. I currently work as a Plumbing detailer and draftsman,
+            drawing and detaling plans for mechnical equipment for commercial buildings I am stil single and searching for my 
+            eternal compainon but in th mean time have my best friend Stetson (my dog) to take on adventures.
+            I love the lord and the many blessings he has given me in this life ecpecially for the 
+            oprotunity to learn and grow and gain new experince.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, quam neque numquam nemo laudantium perferendis eum saepe ex quaerat praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio modi repellendus tenetur ipsam vero necessitatibus voluptates rerum perferendis nostrum.
+        </p>
+        <ul class="box">
+            <li><a href= "https://www.churchofjesuschrist.org/temples/details/tucson-arizona-temple" target="_blank">Tucson Arizona Temple</a></li>
+            <li><a href= "https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake City Utah Temple</a></li>
+            <li><a href= "https://www.churchofjesuschrist.org/temples/details/mesa-arizona-temple" target="_blank">Mesa Arizona Temple</a></li>
+        </ul>
+
     </main>
-    <aside>
+
+    <aside class="box">
         <h2>Utah</h2>
         <img src="images/Utah.jpeg" alt="Utah canyon"> 
         <p>Utah is the most beautifal state in the western united states</p>
@@ -32,4 +50,5 @@
         <p>&copy;2023 🔫 Logan Wall 🔫 Hooper, Utah</p>
     </footer>
 </body>
+<!-- This is a comment  -->
 </html>
