Editing About Us

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,11 +3,11 @@
     <head>
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inital-scale=1.0">
-     <title>Logan Wall | WDD 130</title>
+     <title>About Us</title>
 
      <meta name="description" content="This is the About us page for White Water Adventures rafting site.">
      <meta name="author" content="Logan Wall">
-     <link rel="stylesheet" href="styles/styles.css"> 
+     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
     <header>
@@ -27,7 +27,44 @@
             <img src="images/hero.png" alt="hero image">
   
           </div> 
+          <h2>White Water Adventures</h2>
+          <article>
+               <img src="images/happy-client.png" alt="Happy Client">
+               <p>
+                Company purpose, motto, creed, misson etc. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet earum ullam esse obcaecati blanditiis labore, libero provident suscipit nesciunt magni, dolore harum eligendi natus recusandae aliquid nam quas culpa? Maiores!
 
+               </p>
+          </article>
+
+          <section>
+               <h2>History</h2>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tempore, laborum cumque hic quam quis illum nostrum! Placeat facere quis magnam praesentium. Dicta expedita mollitia ut reiciendis numquam commodi. Aut!</p>
+
+          </section>
+          <section>
+            <h2>Adventure Awaits You</h2>
+            <img src="images/wwr1.png" alt="White Water Rafting Group">
+            <img src="images/wwr2.png" alt="River Canyon">
+            <img src="images/wwr3.png" alt="Solo White Water Rafter">
+            <img src="images/wwr4.png" alt="Duo White Water Kyak's">
+            <img src="images/wwr5.png" alt="Wide River Canyon">
+
+          </section>
+          
+          <footer>
+            <p>©️2023 | White Water Adventures | Logan Wall</p>
+            <nav class="social links">
+               <a href="https://facebook.com">
+                  <img src="images/Facebook.png" alt="Facebook">
+               </a>
+               <a href="https://twitter.com">
+                  <img src="images/twitter.png" alt="Twttier">
+               </a>
+               <a href="https://instagram.com">
+                  <img src="images/Instagram.png" alt="Instagram">
+               </a>
+            </nav>
+          </footer>
 
     </main>    
     </header>
