Week 04 home page update

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">"White Water Rafting Website"</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Siteplan</a>
             <a href="https://www.linkedin.com/">Linkedin Home Page</a>
             <a href="https://www.facebook.com/">Facebook Home Page</a>
         </nav>
     </header>
+    <div class= "grid">
     <main>
         <h1>Logan Wall | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name os Logan Wall" width="200">
@@ -44,8 +45,12 @@
     <aside class="box">
         <h2>Utah</h2>
         <img src="images/Utah.jpeg" alt="Utah canyon"> 
-        <p>Utah is the most beautifal state in the western united states</p>
+        <p>Utah is the most beautifal state in the western united states Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore illo qui nesciunt deserunt maxime labore itaque, ipsam nam accusamus perferendis, velit dolorum soluta recusandae! Labore exercitationem vero delectus sint alias.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident itaque, sapiente eum ut similique fugiat! Deleniti libero tempore temporibus consequatur minima, eligendi provident aliquid ducimus tenetur iure deserunt amet eveniet veritatis quasi, illo corrupti vitae adipisci velit, nemo impedit doloremque? Voluptatem sint beatae odio quod quidem ipsa magnam? Ducimus, reprehenderit!
+
+        </p>
     </aside>
+</grid>
     <footer>
         <p>&copy;2023 🔫 Logan Wall 🔫 Hooper, Utah</p>
     </footer>
