--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,12 +43,26 @@
           </section>
           <section>
             <h2>Adventure Awaits You</h2>
+            <figure> 
             <img src="images/wwr1.png" alt="White Water Rafting Group">
+            <figcaption>Full day Trip</figcaption>
+            </figure>
+            <figure>
             <img src="images/wwr2.png" alt="River Canyon">
+            <figcaption> Bear river canyon</figcaption>
+            </figure>
+            <figure>
             <img src="images/wwr3.png" alt="Solo White Water Rafter">
+            <figcaption>Solo Extreme Rapids</figcaption>
+            </figure>
+            <figure>
             <img src="images/wwr4.png" alt="Duo White Water Kyak's">
+            <figcaption>Duo Tours</figcaption>
+            </figure>
+            <figure>
             <img src="images/wwr5.png" alt="Wide River Canyon">
-
+            <figcaption>Lazy River Canyon</figcaption>
+            </figure>
           </section>
           
           <footer>
