--- a/quiz.html
+++ b/quiz.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <meta chartset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, nital scale=1">
   <link rel="stylesheet" href="styles/quiz.css">
   <title>WDD 130 | Basic HTML & CSS Quiz</title>
+  <meta name="description" content="this is the Quiz page for WDD 130 Week 05.">
+  <meta name="author" content="Logan Wall">
 </head>
 <body> 
 <header> 
@@ -34,3 +36,4 @@
 </main>
 <footer>
     <p>©️2023 | HTML Form - User Course Quiz| Logan Wall</p>
+</footer>    
