--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, nital scale=1">
   <link rel="stylesheet" href="styles/quiz.css">
   <title>WDD 130 | Basic HTML & CSS Quiz</title>
-  <meta name="description" content="This is the Quiz page for WDD 130 Week 05.">
+  <meta name="description" content="Basic HTML & CSS Quiz.">
   <meta name="author" content="Logan Wall">
 </head>
 <body> 
