--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,7 +61,7 @@
    <input type="radio" id="Website Suggestion" name="message" value="Website Suggestion"
 
    <input type="checkbox" id="newsletter" name="newsletter"
-   <label></label>
+   <label>S</label>
 
    <button type="submit">Submit Message</button>
 </form>
