--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,12 +13,15 @@
     <header>
         <h1>White Water Adventures</h1>
            <img src = "images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
+
+    </div>
         <nav>
             <a href = "wwr/index,html">Home</a>
             <a href = "wwr/about.html">About Us</a>
             <a href = "wwr/trips.html">Trips</a>
             <a href = "wwr/contact.html">Contact Us</a>
         </nav>
+    <h1>White Water Adventures</h1>
     </header>
     <main>
         <div class="hero">
