--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,inital-scale=1.0">
-     <title>Contact Us</title>
-     <meta name="description" content="This is the Contact us page for White Water Adventures rafting site.">
-     <meta name="author" content="Logan Wall">
-     <link rel="stylesheet" href="styles/rafting.css"> 
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,inital-scale=1.0">
+<title>Contact Us</title>
+<meta name="description" content="This is the Contact us page for White Water Adventures rafting site.">
+<meta name="author" content="Logan Wall">
+<link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
-    <header>
-    <h1>White Water Adventures</h1>
-      <img src = "images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
-      <nav>
-      <a href = "wwr/index,html">Home</a>
-      <a href = "wwr/about.html">About Us</a>
-      <a href = "wwr/trips.html">Trips</a>
-      <a href = "wwr/contact.html">Contact Us</a>
-      </nav>
+   <header>
+   <h1>White Water Adventures</h1>
+   <img src = "images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
+   <nav>
+   <a href = "index,html">Home</a>
+   <a href = "about.html">About Us</a>
+   <a href = "trips.html">Trips</a>
+   <a href = "contact.html">Contact Us</a>
+   </nav>
    </header>
 <main>
    <h1>Contact Us</h1>
@@ -29,7 +29,7 @@
 <p>Email: <a href="mail to:">WWRadven@gmail.com</a></p>
 <div class="map">
    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8201.721150751282!2d-111.74650700526442!3d40.627023277732164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sutah%20rivers!5e0!3m2!1sen!2sus!4v1684629482080!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+<div>
 <h2>Our Amazing Staff Are happy to Help</h2>
    <section>
    <figure>
@@ -44,7 +44,6 @@
    <img src = images/happy-employee-03.png alt="Office staff" 
    <figcaption>Office Staff</figcaption>
    </figure>
-   </section>
 </div>
 
 <form>
@@ -57,18 +56,22 @@
    <input type="email" id="usermail" name="usermail">
 
    <input type="radio" id="Genral Inquiry" name="message" value="Genral Inquiry"
+   <label>Genral Inquiry</label>
    <input type="radio" id="Reservation Question" name="message" value="Reservation Question"
+   <label>Reservation Question</label>
    <input type="radio" id="Website Suggestion" name="message" value="Website Suggestion"
+   <label>Website Suggestion</label>
 
-   <input type="checkbox" id="newsletter" name="newsletter"
-   <label>S</label>
+   <input type="checkbox" id="Newsletter" name="Newsletter"
+   <label>Newsletter</label>
 
    <button type="submit">Submit Message</button>
+   </fieldset>
 </form>
-
+</main> 
 <footer>
    <p>©️2023 | White Water Adventures | Logan Wall</p>
-   <nav class="social links">
+   <div class="social links">
    <a href="https://facebook.com">
    <img src="images/Facebook.png" alt="Facebook">
    </a>
@@ -78,7 +81,10 @@
    <a href="https://instagram.com">
    <img src="images/Instagram.png" alt="Instagram">
    </a>
-   </nav>
+</div>
 </footer>
-</main>    
+
+  
+</body>
+</html> 
     
