--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,7 +71,7 @@
 </main> 
 <footer>
    <p>©️2023 | White Water Adventures | Logan Wall</p>
-   <div class="social links">
+   <div class="social-links">
    <a href="https://facebook.com">
    <img src="images/Facebook.png" alt="Facebook">
    </a>
