about us enhancemet

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,12 +25,14 @@
    </header>
     <main>
 
-    <div class="hero">
-    <img src="images/hero.png" alt="hero image">
-    <h1>White Water Adventures</h1>
+   <div class="hero">
+  
+   <img src="images/hero.png" alt="hero image">
+   <h1>White Water Adventures</h1>
 
     <article>
       <img src="images/happy-client.png" alt="Happy Client">
+    
 
          
     <p>
@@ -41,7 +43,12 @@
     <section class="history">
     <h2>History</h2>
      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tempore, laborum cumque hic quam quis illum nostrum! Placeat facere quis magnam praesentium. Dicta expedita mollitia ut reiciendis numquam commodi. Aut!</p>
-      <!-- add another image and p tag here -->
+
+     <img src="images/history.png" alt="white water adventure history">
+     <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis facere facilis animi possimus, illum aspernatur, voluptatem voluptates omnis eaque doloremque placeat quod autem nostrum fugiat debitis dicta magni, ex fugit?
+     </p>
+      <!-- add another image and p tag here history height auto height auto width 300 px-->
    </section>
    <section class="adventure">
    <h2>Adventure Awaits You</h2>
