--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,9 +28,10 @@
    <div class="hero">
   
    <img src="images/hero.png" alt="hero image">
-   <h1>White Water Adventures</h1>
 
+   <h1>White Water Adventures</h1>
     <article>
+     <h2>Purpose, Motto, etc.</h2>
       <img src="images/happy-client.png" alt="Happy Client">
     
 
