--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,inital-scale=1.0">
-<title>Contact Us</title>
-<meta name="description" content="This is the Contact us page for White Water Adventures rafting site.">
+<title>About Us</title>
+<meta name="description" content="This is the About us page for White Water Adventures rafting site.">
 <meta name="author" content="Logan Wall">
 <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
-   <header>
-   <h1>White Water Adventures</h1>
-   <img src = "images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
+    <header>
+
+   
+    <img src="images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
+
+    
    <nav>
-   <a href = "index,html">Home</a>
-   <a href = "about.html">About Us</a>
-   <a href = "trips.html">Trips</a>
-   <a href = "contact.html">Contact Us</a>
+
+        <a href = "index,html">Home</a>
+        <a href = "about.html">About Us</a>
+        <a href = "trips.html">Trips</a>
+        <a href = "contact.html">Contact Us</a>
    </nav>
    </header>
 <main>
    <h1>Contact Us</h1>
 
-
+   <div class="map">
    <h2>Send Us a Message</h2>
 <p>White Water Rafting</p>
 <p>Phone: 777-777-7777</p>
 <p>Email: <a href="mail to:">WWRadven@gmail.com</a></p>
-<div class="map">
+
    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d8201.721150751282!2d-111.74650700526442!3d40.627023277732164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sutah%20rivers!5e0!3m2!1sen!2sus!4v1684629482080!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<div>
-<h2>Our Amazing Staff Are happy to Help</h2>
-   <section>
+   </div>
+
+   <section class="staff">
+      <h2>Our Amazing Staff Are happy to Help</h2>
+      <div>
    <figure>
-   <img src = images/happy-employee-01.png alt = "Head of Marketing">
+   <img src=images/happy-employee-01.png alt = "Head of Marketing">
    <figcaption>Head of Marketing</figcaption>
    </figure>
    <figure>
-   <img src = images/happy-employee-02.png alt="guide crew"
-   <ficaption>Guide Crew</figcaption>
-   </figure>
-   <figure>
-   <img src = images/happy-employee-03.png alt="Office staff" 
-   <figcaption>Office Staff</figcaption>
-   </figure>
+      <img src=images/happy-employee-02.png alt = "Head of Marketing">
+      <figcaption>Guide Crew</figcaption>
+      </figure>
+      <figure>
+         <img src=images/happy-employee-03.png alt = "Head of Marketing">
+         <figcaption>Office Staff</figcaption>
+         </figure>
+   </section>
 </div>
-
+</main>
 <form>
    <fieldset>
              <!-- form elements go here -->
@@ -56,31 +63,31 @@
    <input type="email" id="usermail" name="usermail">
 
    <input type="radio" id="Genral Inquiry" name="message" value="Genral Inquiry"
-   <label>Genral Inquiry</label>
+   <label for="Genral Inquiry">Genral Inquiry</label>
+
    <input type="radio" id="Reservation Question" name="message" value="Reservation Question"
    <label>Reservation Question</label>
+
    <input type="radio" id="Website Suggestion" name="message" value="Website Suggestion"
    <label>Website Suggestion</label>
 
    <input type="checkbox" id="Newsletter" name="Newsletter"
    <label>Newsletter</label>
-
+   <input type="textarea" id="message"
+   <label>Message</label>
    <button type="submit">Submit Message</button>
    </fieldset>
 </form>
 </main> 
 <footer>
    <p>©️2023 | White Water Adventures | Logan Wall</p>
-   <div class="social-links">
+   <div>
    <a href="https://facebook.com">
-   <img src="images/Facebook.png" alt="Facebook">
-   </a>
+   <img src="images/Facebook.png" alt="Facebook"></a>
    <a href="https://twitter.com">
-   <img src="images/twitter.png" alt="Twttier">
-   </a>
+   <img src="images/twitter.png" alt="Twttier"></a>
    <a href="https://instagram.com">
-   <img src="images/Instagram.png" alt="Instagram">
-   </a>
+   <img src="images/Instagram.png" alt="Instagram"></a>
 </div>
 </footer>
 
