--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
     <header>
+        <header>
+
+   
+            <img src="images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
+        
+            
+           <nav>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
@@ -21,7 +28,9 @@
         </nav>
     </header>
     <main>
-
+        <div class="home">
+        <img src="images/homepage.png">
+    </div>
     </main>
     <footer>
         <p>&copy;2023 🔫 Logan Wall 🔫 Hooper, Utah</p>
