--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,17 +10,52 @@
 </head>
 <body>
    <header>
-   <h1>White Water Adventures</h1>
+
    <img src = "images/White-Water-Adventures-Logo.png" alt="White Water White-Water-Adventures-Logo"> 
    <nav>
-   <a href = "index,html">Home</a>
-   <a href = "about.html">About Us</a>
-   <a href = "trips.html">Trips</a>
-   <a href = "contact.html">Contact Us</a>
+   <a href="index.html">Home</a>
+   <a href="about.html">About Us</a>
+   <a href="trips.html">Trips</a>
+   <a href="contact.html">Contact Us</a>
    </nav>
    </header>
 <main>
+<div class="redirect">
+   <a href="contact.html">For Trip Info Contact Us</a>
+</div>
+<section class="trips">
+   <h2>Adventure Awaits You</h2>
+   <div>
+      <figure> 
+      <img src="images/trips01.png" alt="White Water Rafting Group">
+      <figcaption>Montuzuma rapids take a plunge down the raging waters of the Montuzuma river </figcaption>
+      </figure>
+      <figure>
+      <img src="images/trips02.png" alt="River Canyon">
+      <figcaption> Take a gentle ride down bear river canyon</figcaption>
+      </figure>
+      <figure>
+      <img src="images/trips03.png" alt="Solo White Water Rafter">
+      <figcaption>Solo Extreme Rapids</figcaption>
+      </figure>
 
+   </div>
+   </section>
+
+   <table>
+      <tr>
+         <th>Our Trips</th>
+      </tr>
+      <tr>
+         <td>Montuzuma River</td>
+         </tr>
+         <tr>
+         <td>Bear River Canyon</td>
+      </tr>
+      <tr>
+         <td>Extreme Solo Rafting</td>
+      </tr>
+   </table>
 </main> 
 <footer>
    <p>©️2023 | White Water Adventures | Logan Wall</p>
